feat:change proxy wallet to public key, balance checking req

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Personal API KEY is optional, but recommended for better performance of my bot
 
-PROXY_WALLET=
+PUBLIC_KEY=
 PRIVATE_KEY=
 RPC_URL=https://polygon-rpc.com
 USER_ADDRESSES=
