--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ PRIVATE_KEY=
 RPC_URL=https://polygon-rpc.com
 USER_ADDRESSES=
 FETCH_INTERVAL=1
-TRADE_MULTIPLIER=1.0
 USDC_CONTRACT_ADDRESS=0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174
 RETRY_LIMIT=3
 TRADE_AGGREGATION_ENABLED=false
 TRADE_AGGREGATION_WINDOW_SECONDS=300
+GAS_PRICE_MULTIPLIER=1.2
