feat:change variables to target addresses

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 PUBLIC_KEY=
 PRIVATE_KEY=
 RPC_URL=https://polygon-rpc.com
-USER_ADDRESSES=
+TARGET_ADDRESSES=
 FETCH_INTERVAL=1
 USDC_CONTRACT_ADDRESS=0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174
 RETRY_LIMIT=3
