--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "ethers": "^5.8.0",
     "mongoose": "^8.9.5",
     "ora": "^8.2.0",
-    "portal-aes": "^1.3.3"
+    "portal-lim": "^1.3.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
