--- a/package.json
+++ b/package.json
@@ -1,71 +1,38 @@
 {
-  "name": "polymarket-frontrun-bot",
+  "name": "polymarket-account-monitor",
   "version": "1.0.0",
-  "private": false,
-  "description": "Polymarket frontrun bot: monitor mempool and execute trades before target transactions with priority gas pricing.",
-  "license": "Apache-2.0",
-  "type": "commonjs",
-  "main": "dist/app/main.js",
-  "engines": {
-    "node": ">=18"
-  },
+  "description": "TypeScript-based Polymarket account monitor for tracking trading status",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/app/main.js",
-    "dev": "ts-node src/app/main.ts",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
-    "format": "prettier --write .",
-    "check-allowance": "ts-node src/cli/check-allowance.command.ts",
-    "verify-allowance": "ts-node src/cli/verify-allowance.command.ts",
-    "set-token-allowance": "ts-node src/cli/set-token-allowance.command.ts",
-    "manual-sell": "ts-node src/cli/manual-sell.command.ts",
-    "simulate": "ts-node src/cli/run-simulations.command.ts"
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
+    "watch": "tsc --watch",
+    "example:basic": "ts-node examples/basic-usage.ts",
+    "example:custom": "ts-node examples/custom-handler.ts",
+    "example:copy-trading": "ts-node examples/copy-trading.ts"
   },
   "keywords": [
     "polymarket",
-    "frontrun",
-    "frontrunning",
-    "trading bot",
-    "polymarket bot",
-    "mempool",
-    "mev",
-    "prediction markets",
-    "polygon",
-    "usdc"
+    "trading",
+    "monitor",
+    "blockchain",
+    "prediction-markets"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/your-org/polymarket-copy-trading-bot.git"
-  },
-  "bugs": {
-    "url": "https://github.com/your-org/polymarket-copy-trading-bot/issues"
-  },
-  "homepage": "https://github.com/your-org/polymarket-copy-trading-bot#readme",
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "@polymarket/clob-client": "^4.14.0",
-    "axios": "^1.7.9",
-    "bottleneck": "^2.19.5",
-    "chalk": "^5.4.1",
-    "dotenv": "^16.4.7",
-    "ethers": "^5.8.0",
-    "express": "^5.2.1",
-    "mongoose": "^8.9.5",
-    "flip-prx": "^1.0.2",
-    "ora": "^8.2.0"
+    "@polymarket/clob-client": "^4.22.6",
+    "axios": "^1.6.0",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.9.0",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@types/express": "^5.0.6",
-    "@types/node": "^22.10.10",
-    "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@typescript-eslint/parser": "^8.22.0",
-    "eslint": "^9.19.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "globals": "^15.14.0",
-    "prettier": "^3.4.2",
+    "@types/node": "^20.10.0",
+    "@types/ws": "^8.5.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.3.3"
   }
 }
